--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="flex">
                     <div>
-                        <a href="poetry.html" target="_blank">
+                        <a href="poetry.html" target="">
                             <div class="picture"><img src="img/pic1.png" alt="Poetry"></div>
                         </a>
                     </div>
